# ticket-classifier

./: README.md  main.py  pyproject.toml  ticket.db  ticket_class.py
templates/: index.html
