[project]
name = "ticket-classifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.0",
    "langchain>=1.3.10",
    "langchain-community>=0.4.2",
    "langchain-groq>=1.1.3",
    "pysqlite3>=0.6.0",
    "sqlite-utils>=3.39",
    "uvicorn>=0.49.0",
]
